--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                     <li>M. Nakashima, M. Miyasaka, N. Satomi, Y. Kobayashi, S. Hirose, M. Saigan, Y. Enta, <strong>T. Ishizone</strong>, K. Nakamura, M. Hata, and N. Tada
                         "Implications of the En Face View of Transcatheter Heart Valves for Coronary Access Post-TAVR",
                         <i>J Am Coll Cardiol Intv</i>, 2023.
-                        <a href="https://www.jacc.org/doi/10.1016/j.jcin.2023.08.038">paper</a><a href="https://www.sendai-kousei-hospital.jp/department/cardiovascular/specialty/specialty-as/en-face-view-deriver">calculator</a></li>
+                        <a href="https://www.jacc.org/doi/10.1016/j.jcin.2023.08.038">paper</a>
+                        <a href="https://www.sendai-kousei-hospital.jp/department/cardiovascular/specialty/specialty-as/en-face-view-deriver">calculator</a></li>
                     <li><strong>T. Ishizone</strong>, T. Higuchi, K. Nakamura.
                         "Ensemble Kalman variational objective: a variational inference framework for sequential variational auto-encoders", 
                         <i>Nonlinear Theory and Its Applications</i>, IEICE, 2023.
