--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
                 <h2 id="publications">Publications / 論文</h2>
                 <h3>International Journals</h3>
                 <ul>
+                    <li><strong>T. Ishizone</strong>, Y. Matsunaga, S. Fuchigami, and K. Nakamura. 
+                        "Representation of Protein Dynamics Disentangled by Time-Structure-Based Prior",
+                        <i>J. Chem. Theory Comput.</i>, Vol. 20, No. 1, pp. 436--450, 2024.
+                        <a href="https://pubs.acs.org/doi/abs/10.1021/acs.jctc.3c01025">paper</a>
+                        <a href="https://github.com/ZoneTsuyoshi/time-structured-vae">code</a></li>
                     <li>M. Nakashima, M. Miyasaka, N. Satomi, Y. Kobayashi, S. Hirose, M. Saigan, Y. Enta, <strong>T. Ishizone</strong>, K. Nakamura, M. Hata, and N. Tada
                         "Implications of the En Face View of Transcatheter Heart Valves for Coronary Access Post-TAVR",
                         <i>J Am Coll Cardiol Intv</i>, 2023.
@@ -110,7 +115,7 @@
                         <a href="https://www.sendai-kousei-hospital.jp/department/cardiovascular/specialty/specialty-as/en-face-view-deriver">calculator</a></li>
                     <li><strong>T. Ishizone</strong>, T. Higuchi, K. Nakamura.
                         "Ensemble Kalman variational objective: a variational inference framework for sequential variational auto-encoders", 
-                        <i>Nonlinear Theory and Its Applications</i>, IEICE, 2023.
+                        <i>Nonlinear Theory and Its Applications</i>, IEICE, Vol. 14, No. 4, pp. 691--717, 2023.
                         <a href="https://www.jstage.jst.go.jp/article/nolta/14/4/14_691/_article/-char/en">paper</a>
                         <a href="https://github.com/ZoneMS/EnKO">code</a></li>
                     <li><strong>T. Ishizone</strong>, K. Nakamura.
@@ -119,7 +124,7 @@
                         <a href="https://www.jstage.jst.go.jp/article/ipsjjip/30/0/30_888/_article/-char/en">paper</a>
                         <a href="https://github.com/ZoneTsuyoshi/lock">code</a></li>
                 </ul>
-                Others: 1 submitted, 2 accepted
+                Others: 1 submitted, 1 accepted
                 <h3>International Conferences</h3>
                 <ul>
                     <li><strong>T. Ishizone</strong>, T. Higuchi, K. Okusa, and K. Nakamura. 
@@ -307,9 +312,11 @@
                     <li>TOEIC820点</li>
                     <li>実用技能英語検定準1級</li>
                     <li>実用数学技能検定準1級</li>
+                    <li>応用情報技術者試験</li>
                     <li>統計検定「統計数理」「統計応用(理工学)」1級</li>
                     <li>高等学校教諭一種免許状（数学）</li>
                     <li>中学教諭一種免許状（数学）</li>
+                    <li>世界遺産検定2級</li>
                 </ul>
 
 
