--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <a href="https://www.jstage.jst.go.jp/article/ipsjjip/30/0/30_888/_article/-char/en">paper</a>
                         <a href="https://github.com/ZoneTsuyoshi/lock">code</a></li>
                 </ul>
-                Others: 1 submitted, 1 accepted
+                Others: 1 submitted
                 <h3>International Conferences</h3>
                 <ul>
                     <li><strong>T. Ishizone</strong>, T. Higuchi, K. Okusa, and K. Nakamura. 
