--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </ul>
 
 
-                <h2 id="publications">Publications / 論文</h2>
+                <h2 id="publications">Publications / 論文・出版物</h2>
                 <h3>International Journals</h3>
                 <ul>
                     <li><strong>T. Ishizone</strong>, Y. Matsunaga, S. Fuchigami, and K. Nakamura. 
@@ -157,6 +157,11 @@
                         情報処理学会デジタルプラクティス, Vol. 60, No. 3, pp. 53--65, 2022.
                         <a href="https://www.ipsj.or.jp/dp/contents/publication/51/TR0303-06.html">paper</a>
                     </li>
+                </ul>
+
+                <h3>Japanese Books</h3>
+                <ul>
+                    <li><strong>石曽根毅</strong>．『時系列データ解析における課題対応と解析例』3.4項「時系列分析におけるTransformerの適用」．情報機構．2024．</li>
                 </ul>
 
                 <h2 id="presentations">Presentations and Posters / 発表</h2>
@@ -312,6 +317,7 @@
                     <li>TOEIC820点</li>
                     <li>実用技能英語検定準1級</li>
                     <li>実用数学技能検定準1級</li>
+                    <li>データベーススペシャリスト試験</li>
                     <li>応用情報技術者試験</li>
                     <li>統計検定「統計数理」「統計応用(理工学)」1級</li>
                     <li>高等学校教諭一種免許状（数学）</li>
